<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.8">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/display"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textSize="48sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button9"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_delete"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button_delete"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button6"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_plus"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button_plus"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_minus"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button_minus"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button00"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button00"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:text="@string/button0"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_equal"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dip"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button_equal"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
